--- a/emms-sdk/pyproject.toml
+++ b/emms-sdk/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "emms"
-version = "0.2.0"
-description = "Enhanced Memory Management System — persistent hierarchical memory for AI agents"
+version = "0.4.0"
+description = "Enhanced Memory Management System — persistent hierarchical memory with graph memory, consciousness, and multi-strategy retrieval for AI agents"
 authors = [{name = "Shehzad Ahmed"}]
 license = {text = "MIT"}
 readme = "README.md"
@@ -20,7 +20,10 @@ graph = ["networkx>=3.0"]
 ml = ["scikit-learn>=1.3"]
 chroma = ["chromadb>=0.4"]
 embeddings = ["sentence-transformers>=2.2"]
-all = ["networkx>=3.0", "scikit-learn>=1.3", "chromadb>=0.4"]
+llm-anthropic = ["anthropic>=0.25"]
+llm-openai = ["openai>=1.0"]
+pipeline = ["aiohttp>=3.9"]
+all = ["networkx>=3.0", "scikit-learn>=1.3", "chromadb>=0.4", "aiohttp>=3.9"]
 bench = ["letta>=0.4", "tabulate>=0.9"]
 dev = [
     "pytest>=7.0",
